# sea-orm-issue-662

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  log.txt
sql_init/: 1_schema.sql
src/: main.rs
src/entities/: game.rs  mod.rs  prelude.rs
