[package]
name = "sea-orm-issue-multiple-pk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version ="0.7" , features = ["runtime-async-std-native-tls", "sqlx-mysql"]}
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.9.0"
